Fixed: overflow in form view

--- a/src/pages/form/style.scss
+++ b/src/pages/form/style.scss
@@ -1,5 +1,6 @@
 .form-view {
   margin: 20px 0;
+  overflow: auto;
   &__title {
     text-align: center;
   }
